# s7zun

./: .gitignore  README.md  pyproject.toml
src/s7zun/: __main__.py  checker.py
tests/: test_checker.py
