[project]
name = "s7zun"
version = "0.0.1"
authors = [
  { name = "melhajj06" },
]
description = "A small package to check for 7zip version updates"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Natural Language :: English",
    "Topic :: Software Development :: Version Control"
]
license = "GPL-3.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "winsdk-toast"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
Homepage = "https://github.com/melhajj06/7zun"
Issues = "https://github.com/melhajj06/7zun/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    ".",
    "src"
]